@@ -3,26 +3,20 @@
 #' Access GWAS pvalues
 #' @param object \code{GWAS} or \code{AnnotatedGWAS} object
 #' @export
-
 setGeneric("pvalue", function(object) standardGeneric("pvalue"))
 setMethod( "pvalue", "GWAS",          function(object) mcols(object)$pvalue)
-setMethod( "pvalue", "AnnotatedGWAS", function(object) mcols(object)$pvalue)
 
 #' Access GWAS markers
 #' @param object \code{GWAS} or \code{AnnotatedGWAS} object
 #' @export
-
 setGeneric("marker", function(object) standardGeneric("marker"))
 setMethod( "marker", "GWAS",          function(object) mcols(object)$marker)
-setMethod( "marker", "AnnotatedGWAS", function(object) mcols(object)$marker)
 
 #' Access GWAS z-scores
 #' @param object \code{GWAS} or \code{AnnotatedGWAS} object
 #' @export
-
 setGeneric("zscore", function(object) standardGeneric("zscore"))
 setMethod( "zscore", "GWAS",          function(object) mcols(object)$zscore)
-setMethod( "zscore", "AnnotatedGWAS", function(object) mcols(object)$zscore)
 zvalue <- function(object) zscore(object)
 
 
